# G60pro_Autopilot-Arm

./: .gitmodules  111.md  CLAUDE.md  G60Pro_自动充电机器人_项目规划方案.md  frames_2026-04-29_15.45.07.gv
Arm_Vision/Vision/: CLAUDE.md  icp_refine.py  pose_estimation.py  run_icp_refine.sh  run_pose_estimation.sh  step_to_pcd.py
Arm_Vision/Vision/Log/: OrbbecSDK.log.txt
Arm_Vision/Vision/OrbbecViewer_v1.10.35_202601290127_linux_x64_release/config/: config.ini  view.ini
Arm_Vision/Vision/arm_vision/: package.xml  setup.py
Arm_Vision/Vision/arm_vision/arm_vision/: vision_node.py
Arm_Vision/Vision/arm_vision/launch/: arm_vision.launch.py
Arm_Vision/Vision/datasets/DC charging port.v1i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
Arm_Vision/Vision/datasets/DC charging port.v2i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
Arm_Vision/Vision/datasets/直流充电座STP和点云/: charging_port_template.pcd  (+1 more)
Arm_Vision/Vision/docs/: yolo_training_tutorial.html  操作教程_Part1_Rizon10环境搭建与基础控制.docx  操作教程_Part2_视觉系统搭建与手眼标定.docx  操作教程_Part3_力控插入策略开发.docx  操作教程_Part4_状态机与系统集成.docx  流程分析.md  自动充电机器人_项目开发规划方案.docx
AutoPilot/20260325G60pro/: CLAUDE.md  Cartographer纯定位与SLAM配置对比分析.md  check_costmap_data.py  check_obstacle_avoidance.py  frames_2026-04-30_22.31.57.gv  开发笔记.md
AutoPilot/20260325G60pro/docs/: G60Pro自动驾驶开发文档.md  SLAM测试流程.md  analyze_global_path.py  analyze_single_lidar_issue.md  check_costmap_single_lidar.py  check_single_lidar.sh  check_single_lidar_1.py  check_single_lidar_2.py  debug_single_lidar_costmap.sh  detailed_diagnostic.py  diagnose_nav.sh  diagnose_single_lidar_costmap.sh  direct_costmap_test.py  frames_2026-04-30_10.16.12.gv  manual_start_nav.sh  monitor_nav.sh  save_map.sh  slam_workflow_analysis.md  start_nav_real.sh  start_nav_sim.sh  start_nav_sim_map.sh  start_slam.sh  start_slam_real.sh  start_slam_sim.sh  test_single_lidar_detection.sh  view_sensors.sh  view_sensors_real.sh  view_sensors_sim.sh  代价地图障碍物残留问题修复.md  避障功能QoS问题分析.md  避障功能修复说明.md
AutoPilot/20260325G60pro/maps/: g60pro.pgm  g60pro.yaml  g60pro_sim_map.pgm  g60pro_sim_map.yaml  g60pro_sim_map_v0.pgm  g60pro_sim_map_v0.yaml  g60pro_sim_map_v1.pgm  g60pro_sim_map_v1.yaml  g60pro_sim_map_v2.pgm  g60pro_sim_map_v2.yaml  g60pro_sim_map_v3.pgm  g60pro_sim_map_v3.yaml  g60pro_sim_map_v4.pgm  g60pro_sim_map_v4.yaml  g60pro_sim_map_v5.pgm  g60pro_sim_map_v5.yaml  g60pro_v1.pgm  g60pro_v1.yaml  g60pro_v10.pgm  g60pro_v10.yaml  g60pro_v2.pgm  g60pro_v2.yaml  g60pro_v3.pgm  g60pro_v3.yaml  g60pro_v4.pgm  g60pro_v4.yaml  g60pro_v5.pgm  g60pro_v5.yaml  g60pro_v6.pgm  g60pro_v6.yaml  g60pro_v7.pgm  g60pro_v7.yaml  g60pro_v8.pbstream  g60pro_v8.pgm  g60pro_v8.yaml  g60pro_v9.pgm  g60pro_v9.yaml
AutoPilot/20260325G60pro/src/robot_bringup/: package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_bringup/launch/: robot_all.launch.py  robot_navigation.launch.py  robot_slam.launch.py
AutoPilot/20260325G60pro/src/robot_bringup/rviz/: slam.rviz
AutoPilot/20260325G60pro/src/robot_can/: README.md  package.xml  setup.cfg  setup.py
AutoPilot/20260325G60pro/src/robot_can/config/can1/: G60_CAN1_RDM_V1.0.dbc
AutoPilot/20260325G60pro/src/robot_can/config/can4/: G60_CAN4_RDM_V1.0.dbc
AutoPilot/20260325G60pro/src/robot_can/launch/: can.launch.py
AutoPilot/20260325G60pro/src/robot_can/robot_can/: can_node.py
AutoPilot/20260325G60pro/src/robot_description/: README.md  package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_description/launch/: description.launch.py
AutoPilot/20260325G60pro/src/robot_description/meshes/g60pro/: body.stl
AutoPilot/20260325G60pro/src/robot_description/urdf/: g60pro.urdf.xacro
AutoPilot/20260325G60pro/src/robot_ekf_fusion/: README.md  package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_localization/: package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_localization/config/: ekf.yaml
AutoPilot/20260325G60pro/src/robot_localization/launch/: ekf.launch.py
AutoPilot/20260325G60pro/src/robot_msgs/: CMakeLists.txt  README.md  package.xml
AutoPilot/20260325G60pro/src/robot_msgs/msg/: CanFrame.msg  MotorCmd.msg  MotorState.msg
AutoPilot/20260325G60pro/src/robot_navigation/: README.md  package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_navigation/config/: nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml
AutoPilot/20260325G60pro/src/robot_navigation/launch/: nav2_no_amcl.launch.py  navigation.launch.py  navigation_real.launch.py  navigation_sim.launch.py
AutoPilot/20260325G60pro/src/robot_navigation/maps/: g60pro_sim_map.yaml
AutoPilot/20260325G60pro/src/robot_navigation/robot_navigation/: initial_pose_relay.py
AutoPilot/20260325G60pro/src/robot_rviz/: README.md  package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_rviz/rviz/: navigation_real.rviz  navigation_sim.rviz  sensors_view.rviz  sensors_view_sim.rviz  slam_real.rviz  slam_sim.rviz
AutoPilot/20260325G60pro/src/robot_sensors/: package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_sensors/launch/: sensors.launch.py
AutoPilot/20260325G60pro/src/robot_sensors/robot_sensors/: sensors_node.py
AutoPilot/20260325G60pro/src/robot_slam/: README.md  package.xml  setup.py
AutoPilot/20260325G60pro/src/robot_slam/config/: cartographer.lua  cartographer_real.lua  cartographer_real_localization.lua  cartographer_sim.lua  cartographer_sim_localization.lua
AutoPilot/20260325G60pro/src/robot_slam/launch/: slam.launch.py  slam_localization_real.launch.py  slam_real.launch.py  slam_real_localization.launch.py  slam_sim.launch.py  slam_sim_localization.launch.py
AutoPilot/20260325G60pro/src/robot_slam/robot_slam/: save_map.py
AutoPilot/20260325G60pro/src/rslidar_msg/: CMakeLists.txt  README.md  package.xml
AutoPilot/20260325G60pro/src/rslidar_msg/msg/: RslidarScan.msg
设备说明书/02奥比中光摄像头_dabai/: Dabai产品使用建议-20230202.docx
设备说明书/DBC/: G60_CAN1_RDM_V3.9-20231020_lyb.dbc  G60_canMatrix_CAN1_V3.9-20231020.xlsx
设备说明书/安普斯/: 30Nm 12 寸包胶胎20230204(1).STEP  标准品10 寸 30Nm 电机 实心胎 标准轴.STEP
设备说明书/步科/: 步科伺服错误详细说明表 20201225.xlsx  步科转向电机调0教程 以及故障查询.docx
(+350 files in other folders)
