<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_vision</name>
  <version>1.0.0</version>
  <description>G60Pro 机械臂视觉引导节点：YOLO充电口检测 + 粗位姿 + ICP精定位</description>
  <maintainer email="admin@example.com">G60Pro Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>ultralytics</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>open3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
