<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_can</name>
  <version>1.0.0</version>
  <description>G60Pro CAN 通信节点 - 连接 RDM 控制器与电机驱动器</description>
  <maintainer email="admin@example.com">G60Pro Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robot_msgs</depend>
  <depend>can</depend>  <!-- python-can -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>