<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_ekf_fusion</name>
  <version>1.0.0</version>
  <description>G60Pro EKF 定位融合（备用方案，当前未启用）</description>
  <maintainer email="admin@example.com">G60Pro Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>