<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_slam</name>
  <version>1.0.0</version>
  <description>G60Pro Cartographer SLAM</description>
  <maintainer email="admin@example.com">G60Pro Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>cartographer_ros</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>